Make mongodump --oplog work with auth SERVER-2850